[gd_scene load_steps=8 format=3 uid="uid://de8pyumav8djj"]

[ext_resource type="Shader" uid="uid://dwr1i1vnsojeb" path="res://voronoi.gdshader" id="1_06t4h"]
[ext_resource type="Script" uid="uid://p2ks2fha0qlw" path="res://main_menu.gd" id="1_fu7sn"]
[ext_resource type="PackedScene" uid="uid://bp5qgw4jrj5tl" path="res://settings.tscn" id="2_7vrkn"]
[ext_resource type="FontFile" uid="uid://cxm1tlp8v31jh" path="res://Czcionka.otf" id="4_jix8l"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7vrkn"]
shader = ExtResource("1_06t4h")
shader_parameter/resolution = Vector2(1152, 648)
shader_parameter/color_a = Color(0.172549, 0.172549, 0.772549, 1)
shader_parameter/color_b = Color(0.5, 0.5, 0.5, 1)
shader_parameter/color_c = Color(0.69, 0.69, 0.69, 1)
shader_parameter/color_d = Color(0.243137, 0.203922, 0.305882, 1)

[sub_resource type="LabelSettings" id="LabelSettings_glbon"]
font = ExtResource("4_jix8l")
font_size = 90
font_color = Color(0.666667, 0, 0, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fu7sn"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fu7sn")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_7vrkn")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Settings" parent="." instance=ExtResource("2_7vrkn")]
visible = false
layout_mode = 1

[node name="MenuNodes" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MenuNodes"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -182.0
offset_top = -256.0
offset_right = 180.0
offset_bottom = -203.0
grow_horizontal = 2
text = "PROJEKT GRAFIKA"
label_settings = SubResource("LabelSettings_glbon")

[node name="PanelContainer" type="PanelContainer" parent="MenuNodes"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -270.0
offset_right = 150.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_fu7sn")

[node name="VBoxContainer" type="VBoxContainer" parent="MenuNodes/PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="PLAY" type="Button" parent="MenuNodes/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "PLAY"

[node name="ColorRect" type="ColorRect" parent="MenuNodes/PanelContainer/VBoxContainer/PLAY"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="OPTIONS" type="Button" parent="MenuNodes/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "OPTIONS"

[node name="ColorRect" type="ColorRect" parent="MenuNodes/PanelContainer/VBoxContainer/OPTIONS"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="QUIT" type="Button" parent="MenuNodes/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
text = "QUIT
"

[node name="ColorRect" type="ColorRect" parent="MenuNodes/PanelContainer/VBoxContainer/QUIT"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="MenuNodes/PanelContainer/VBoxContainer/PLAY" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MenuNodes/PanelContainer/VBoxContainer/OPTIONS" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MenuNodes/PanelContainer/VBoxContainer/QUIT" to="." method="_on_quit_pressed"]
